swagger, routes: /add_user /remove_user /get_users works
